tests/invalid/chained_compare_three_operands/main.py
def main() -> None:
    x: bool = 1 < 2 < "3"
    print(x)
